--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -9,10 +9,15 @@ main {
 
 /* MAIN PRODUCTS */
 .product-container {
-  width: 1080px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
   gap: 1em;
   padding-bottom: 2em;
+}
+
+@media (max-width: 768px) {
+  .product-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
