--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -2,6 +2,7 @@
 main {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20px;
@@ -20,4 +21,20 @@ main {
   .product-container {
     grid-template-columns: repeat(1, 1fr);
   }
+}
+
+.products-sort{
+  display: inline-flex;
+  justify-content: flex-end;
+  padding: 1em 1em;
+  gap: 1em;
+  align-items: center;
+}
+
+.products-sort select{
+  font-size: 14px;
+  font-size: 16px;
+  padding: 3px;
+  border-radius: 10px;
+  text-align: center;
 }
