--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -32,7 +32,7 @@ footer {
 }
 
 .footer-copyright {
-    width: 1080px;
+    width: 100%;
     border-top: 1px solid #ba53fb;
     text-align: center;
     color: white;
